[FIX] web: miss view of control panel when resizing
The view filters, groupby, favorites, and paging are lost when I shrink
the screen, which I think affects the user experience.
=>Install Payroll
=> view form Payslips Batches
=> click Generate Payslips
=> add line in employee_ids

--- a/addons/web/static/src/search/control_panel/control_panel.scss
+++ b/addons/web/static/src/search/control_panel/control_panel.scss
@@ -69,7 +69,7 @@
 
     .o_cp_bottom_right {
         display: flex;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         justify-content: flex-end;
         column-gap: $o-horizontal-padding;
 
